# sigstore-for-pdf

./: LICENSE  README.md  pnas.1005766107.pdf.crt  pnas.1005766107.pdf.sig  pnas.1005766107.pdf.sigstore  pyproject.toml
